--- a/Localization/English/english.xml
+++ b/Localization/English/english.xml
@@ -24,4 +24,5 @@
   <content contentuid="hbb1bc3e0ga8bdgea4eg6c4cgfea130face6f" version="1">QSAT Face Reserved 5</content>
   <content contentuid="h0ee48a3ag44b4g2720ge2dagffacbd607d1d" version="1">QSAT Face Reserved 6</content>
   <content contentuid="ha3dcc939g9bcdg41bcg743agfab4108eb712" version="2">Neutral</content>
+  <content contentuid="he5ca4b38gc7e7g1a14ge508gbee7154b5d86" version="1">QSAT Reserver 7</content>
 </contentList>
