--- a/Localization/English/english.xml
+++ b/Localization/English/english.xml
@@ -9,14 +9,29 @@
   <content contentuid="he95ae0d9ge67ag0db0g3f09g62951653c271" version="1">QSAT Reserved 5</content>
   <content contentuid="h7042ecb2g5adcg9c03ga90fg59cba0531354" version="1">QSAT Reserved 6</content>
   <content contentuid="ha3dcc939g9bcdg41bcg743agfab4108eb712" version="2">Neutral</content>
-  <content contentuid="he5ca4b38gc7e7g1a14ge508gbee7154b5d86" version="2">QSAT Reserver 1</content>
-  <content contentuid="h06a3efd6g6a88g1c44ga295g5bd26ec0556c" version="1">QSAT Reserver 8</content>
-  <content contentuid="hef1610d2g2fb3gceddg738cg70a9ba5f603f" version="1">QSAT Reserver 7</content>
-  <content contentuid="h80c319d5g3382gd274g3953ga798a320f230" version="1">QSAT Reserver 6</content>
-  <content contentuid="h2c6f9825g2b3egbdd9g3da3g58435ddaf3f9" version="1">QSAT Reserver 5</content>
-  <content contentuid="h6c7568d1gbe2cgdda1g620agc13eb8976164" version="1">QSAT Reserver 4</content>
-  <content contentuid="h6100688fg0138gc1bdga3f5g9eaf5fa98c41" version="1">QSAT Reserver 3</content>
-  <content contentuid="hd9633535gcceeg0b72gc110gfd2ac7c53369" version="1">QSAT Reserver 2</content>
-  <content contentuid="hc55f4182g63b8gdebcg9c8fg79c3834ee1d6" version="1">QSAT Reserver 9</content>
-  <content contentuid="h8244ea58g9756g4a30gd0f0gf9b8b4dc164b" version="1">QSAT Reserver 10</content>
+  <content contentuid="he5ca4b38gc7e7g1a14ge508gbee7154b5d86" version="3">QSAT Reserved 1</content>
+  <content contentuid="h06a3efd6g6a88g1c44ga295g5bd26ec0556c" version="2">QSAT Reserved 8</content>
+  <content contentuid="hef1610d2g2fb3gceddg738cg70a9ba5f603f" version="2">QSAT Reserved 7</content>
+  <content contentuid="h80c319d5g3382gd274g3953ga798a320f230" version="2">QSAT Reserved 6</content>
+  <content contentuid="h2c6f9825g2b3egbdd9g3da3g58435ddaf3f9" version="2">QSAT Reserved 5</content>
+  <content contentuid="h6c7568d1gbe2cgdda1g620agc13eb8976164" version="2">QSAT Reserved 4</content>
+  <content contentuid="h6100688fg0138gc1bdga3f5g9eaf5fa98c41" version="2">QSAT Reserved 3</content>
+  <content contentuid="hd9633535gcceeg0b72gc110gfd2ac7c53369" version="2">QSAT Reserved 2</content>
+  <content contentuid="hc55f4182g63b8gdebcg9c8fg79c3834ee1d6" version="2">QSAT Reserved 9</content>
+  <content contentuid="h8244ea58g9756g4a30gd0f0gf9b8b4dc164b" version="2">QSAT Reserved 10</content>
+  <content contentuid="hf1606250gcf40g7196g53f6g7250465a4ae8" version="1">QSAT</content>
+  <content contentuid="h3e294495g6138ga6cagf1a2g9366fc57969f" version="1">QSAT</content>
+  <content contentuid="h6cb87eb2g7252g757eg7efdg0aa7f3ece4ba" version="1">DIAG_Add_Sad_01</content>
+  <content contentuid="h575106d2g061ag4804g275ag6143d4a9254c" version="1">DIAG_Add_Angry_01</content>
+  <content contentuid="h0605945ag6206g686fgd0b1g4ccdb5afb92b" version="2">EMOT_Pose_Thinking_Z</content>
+  <content contentuid="hfd5da1d8gbb58g8452gd775g4ad17fba2fdc" version="1">QSAT Reserved Face 3</content>
+  <content contentuid="h8478b2b9gb9bag2b69g1b60gd84b0b78ccb5" version="1">QSAT Reserved Face 1</content>
+  <content contentuid="he5903eb6gb39fgdbe4g1fceg386d31f6cd7f" version="1">QSAT Reserved Face 2</content>
+  <content contentuid="h25547a22g3338gf4a9g8dc6gc458eb042240" version="1">QSAT Reserved Face 4</content>
+  <content contentuid="he75fa88fgaff8gfcb6gc80bg51787b226826" version="1">QSAT Reserved Face 5</content>
+  <content contentuid="h96b181b9g068fgadafgb96cg6a32e149357a" version="1">QSAT Reserved Face 6</content>
+  <content contentuid="h4899730cg12a8ge115g2f43gb9b8af13722f" version="1">QSAT Reserved Face 7</content>
+  <content contentuid="h588a9a92gbbb5g7ed3g41d6g15c722a3c859" version="1">QSAT Reserved Face 8</content>
+  <content contentuid="hfc41d863gff7agde91ga6e5g519850109106" version="1">QSAT Reserved Face 9</content>
+  <content contentuid="h3d2b450dge556g1761g9ac2g69abcc25386c" version="1">QSAT Reserved Face 10</content>
 </contentList>
